--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: "\U0001F680 New feature proposal"
 description: Propose a new feature to be added
-labels: ["type: feature request", 'status: needs triage']
+labels: ['type: feature request', 'status: needs triage']
 body:
   - type: markdown
     attributes:
