--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test:e2e": "playwright test",
     "build": "vite build",
     "preview": "vite preview",
-    "prettier": "prettier . -c",
-    "prettier:fix": "prettier . -w",
+    "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint .",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix"
@@ -21,7 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "9.39.2",
-    "@ianvs/prettier-plugin-sort-imports": "4.7.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@playwright/test": "^1.57.0",
     "@solidjs/testing-library": "^0.8.10",
     "@tailwindcss/vite": "4.1.18",
@@ -35,8 +34,9 @@
     "eslint-config-prettier": "10.1.8",
     "jsdom": "^27.3.0",
     "lightningcss": "1.30.2",
-    "prettier": "3.7.4",
+    "prettier": "^3.7.4",
     "prettier-eslint-cli": "8.0.1",
+    "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-tailwindcss": "0.7.2",
     "supertest": "^7.1.4",
     "tailwindcss": "4.1.18",
