feat: Update README and package.json for project details; enhance error handling in ChatInterface and simplify FolderBrowser fetch logic

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "solid-tailwind-ts-vite-template",
-  "version": "1.1.0",
-  "author": "AR10",
+  "name": "@hexafield/opencode-web-ui",
+  "version": "0.0.1",
+  "description": "Web interface for OpenCode",
+  "author": "HexaField",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
