--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:client": "vite dev",
-    "dev:server": "tsx watch server/src/index.ts",
-    "start:server": "tsx server/src/index.ts",
+    "dev:server": "tsx watch --env-file=.env server/src/index.ts",
+    "start:server": "tsx --env-file=.env server/src/index.ts",
     "start:test": "concurrently \"npm run start:server\" \"npm run dev:client\"",
     "test:e2e": "playwright test",
     "build": "vite build",
