--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "monaco-editor": "^0.55.1",
     "solid-js": "1.9.10"
   }
 }
