--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:client": "vite dev",
-    "dev:server": "tsx watch --env-file=.env server/src/index.ts",
+    "dev:server": "NODE_ENV=development tsx watch --env-file=.env server/src/index.ts",
     "start:server": "tsx --env-file=.env server/src/index.ts",
     "start:test": "concurrently \"npm run start:server\" \"npm run dev:client\"",
+    "start": "npm run build && tsx --env-file=.env server/src/index.ts",
     "test:e2e": "playwright test",
     "build": "vite build",
     "preview": "vite preview",
