feat: Add coverage reporting with Vitest and update configuration for Playwright and ESLint

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start:server": "tsx --env-file=.env server/src/index.ts",
     "start:test": "concurrently \"npm run start:server\" \"npm run dev:client\"",
     "start": "npm run build && tsx --env-file=.env server/src/index.ts",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
     "build": "vite build",
     "preview": "vite preview",
@@ -31,6 +33,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/supertest": "^6.0.3",
+    "@vitest/coverage-v8": "^4.0.16",
     "concurrently": "^9.2.1",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
