--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@playwright/test": "^1.57.0",
     "@solidjs/testing-library": "^0.8.10",
     "@tailwindcss/vite": "4.1.18",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
@@ -54,6 +55,7 @@
   },
   "dependencies": {
     "@opencode-ai/sdk": "^1.0.166",
+    "better-sqlite3": "^12.5.0",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "express": "^5.2.1",
