--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^25.0.3",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.16",
@@ -59,6 +60,7 @@
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "js-yaml": "^4.1.1",
     "monaco-editor": "^0.55.1",
     "solid-js": "1.9.10"
   }
