--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "express": "^5.2.1",
     "marked": "^17.0.1",
     "monaco-editor": "^0.55.1",
-    "solid-js": "1.9.10"
+    "solid-js": "1.9.10",
+    "zod": "^4.3.4"
   }
 }
