--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "vitest": "^4.0.16"
   },
   "dependencies": {
-    "@opencode-ai/sdk": "^1.0.224",
+    "@opencode-ai/sdk": "1.1.1",
     "@types/dompurify": "^3.2.0",
     "@types/marked": "^6.0.0",
     "body-parser": "^2.2.1",
