--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "author": "HexaField",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npm run dev:opencode\"",
-    "dev:opencode": "opencode serve --port 4000",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:client": "vite dev",
     "dev:server": "NODE_ENV=development tsx watch --env-file=.env server/src/index.ts",
     "generate:certs": "mkdir -p server/certs && openssl req -x509 -newkey rsa:4096 -keyout server/certs/server.key -out server/certs/server.crt -days 365 -nodes -subj \"/C=US/ST=State/L=City/O=Organization/CN=localhost\"",
     "start:server": "tsx --env-file=.env server/src/index.ts",
-    "start:test": "concurrently \"npm run start:server\" \"npm run dev:client\" \"npm run dev:opencode\"",
+    "start:test": "concurrently \"npm run start:server\" \"npm run dev:client\"",
     "start": "npm run build && tsx --env-file=.env server/src/index.ts",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
