--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@opencode-ai/sdk": "1.1.1",
     "@types/dompurify": "^3.2.0",
     "@types/marked": "^6.0.0",
+    "@xterm/addon-fit": "^0.11.0",
+    "@xterm/xterm": "^6.0.0",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "dompurify": "^3.3.1",
@@ -69,8 +71,6 @@
     "node-pty": "^1.1.0",
     "solid-js": "1.9.10",
     "ws": "^8.19.0",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
     "zod": "^4.3.4"
   }
 }
