--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@hexafield/opencode-web-ui",
   "version": "0.0.1",
   "description": "Web interface for OpenCode",
+  "license": "MIT",
   "author": "HexaField",
   "type": "module",
   "scripts": {
@@ -18,43 +19,8 @@
     "check": "npm run format && npm run lint && npm run test",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write .",
-    "lint": "tsc --noEmit && eslint .",
-    "eslint": "eslint .",
-    "eslint:fix": "eslint . --fix"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@eslint/js": "9.39.2",
-    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@playwright/test": "^1.57.0",
-    "@solidjs/testing-library": "^0.8.10",
-    "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "4.1.18",
-    "@types/body-parser": "^1.19.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.0.3",
-    "@types/supertest": "^6.0.3",
-    "@types/ws": "^8.18.1",
-    "@vitest/coverage-v8": "^4.0.16",
-    "concurrently": "^9.2.1",
-    "eslint": "9.39.2",
-    "eslint-config-prettier": "10.1.8",
-    "jsdom": "^27.3.0",
-    "lightningcss": "1.30.2",
-    "prettier": "^3.7.4",
-    "prettier-eslint-cli": "8.0.1",
-    "prettier-plugin-organize-imports": "^4.3.0",
-    "prettier-plugin-tailwindcss": "0.7.2",
-    "supertest": "^7.1.4",
-    "tailwindcss": "4.1.18",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "8.50.0",
-    "vite": "7.3.0",
-    "vite-plugin-solid": "2.11.10",
-    "vitest": "^4.0.16"
+    "lint": "oxlint --fix",
+    "format": "oxfmt --write"
   },
   "dependencies": {
     "@opencode-ai/sdk": "1.1.1",
@@ -72,5 +38,43 @@
     "solid-js": "1.9.10",
     "ws": "^8.19.0",
     "zod": "^4.3.4"
+  },
+  "devDependencies": {
+    "@eslint/js": "9.39.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@playwright/test": "^1.57.0",
+    "@solidjs/testing-library": "^0.8.10",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "4.1.18",
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.0.3",
+    "@types/supertest": "^6.0.3",
+    "@types/ws": "^8.18.1",
+    "@vitest/coverage-v8": "^4.0.16",
+    "concurrently": "^9.2.1",
+    "husky": "^9.1.7",
+    "jsdom": "^27.3.0",
+    "lightningcss": "1.30.2",
+    "lint-staged": "^16.2.7",
+    "oxfmt": "^0.23.0",
+    "oxlint": "^1.38.0",
+    "supertest": "^7.1.4",
+    "tailwindcss": "4.1.18",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vite": "7.3.0",
+    "vite-plugin-solid": "2.11.10",
+    "vitest": "^4.0.16"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "oxlint --fix",
+      "oxfmt --write"
+    ],
+    "*.{json,css,md,html}": [
+      "oxfmt --write"
+    ]
   }
 }
