add file search feature

--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "author": "HexaField",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev": "concurrently \"pnpm run dev:server\" \"pnpm run dev:client\"",
     "dev:client": "vite dev",
     "dev:server": "NODE_ENV=development tsx watch --env-file=.env server/src/index.ts",
     "generate:certs": "mkdir -p server/certs && openssl req -x509 -newkey rsa:4096 -keyout server/certs/server.key -out server/certs/server.crt -days 365 -nodes -subj \"/C=US/ST=State/L=City/O=Organization/CN=localhost\"",
     "start:server": "tsx --env-file=.env server/src/index.ts",
-    "start:test": "concurrently \"npm run start:server\" \"npm run dev:client\"",
-    "start": "npm run build && tsx --env-file=.env server/src/index.ts",
+    "start:test": "concurrently \"pnpm run start:server\" \"pnpm run dev:client\"",
+    "start": "pnpm run build && tsx --env-file=.env server/src/index.ts",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
-    "check": "npm run format && npm run lint && npm run test",
+    "check": "pnpm run format && pnpm run lint && pnpm run test",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "oxlint --fix",
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dompurify": "^3.3.1",
     "express": "^5.2.1",
+    "fast-glob": "^3.3.3",
     "marked": "^17.0.1",
     "monaco-editor": "^0.55.1",
     "node-pty": "^1.1.0",
