--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ dist
 playwright-report
 test-results
 .DS_Store
-.env
-.env.local
+.env.*
+!.env.example
 npm-debug.log
 .opencode
 .agent/tasks/tasks.*
