--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"pnpm run dev:server\" \"pnpm run dev:client\"",
-    "dev:client": "vite dev",
-    "dev:server": "NODE_ENV=development tsx watch --env-file=.env server/src/index.ts",
+    "dev:client": "vite dev --mode dev",
+    "dev:server": "NODE_ENV=development tsx watch --env-file=.env.dev server/src/index.ts",
     "generate:certs": "mkdir -p server/certs && openssl req -x509 -newkey rsa:4096 -keyout server/certs/server.key -out server/certs/server.crt -days 365 -nodes -subj \"/C=US/ST=State/L=City/O=Organization/CN=localhost\"",
-    "start:server": "tsx --env-file=.env server/src/index.ts",
+    "start:server": "tsx --env-file=.env.prod server/src/index.ts",
     "start:test": "concurrently \"pnpm run start:server\" \"pnpm run dev:client\"",
-    "start": "pnpm run build && tsx --env-file=.env server/src/index.ts",
+    "start": "pnpm run build && tsx --env-file=.env.prod server/src/index.ts",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
     "check": "pnpm run format && tsc --noEmit && pnpm run lint && pnpm run test",
-    "build": "vite build",
+    "build": "vite build --mode prod",
     "preview": "vite preview",
     "lint": "oxlint --fix",
     "format": "oxfmt --write"
