--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/marked": "^6.0.0",
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/xterm": "^6.0.0",
+    "better-sqlite3": "^12.6.2",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "dompurify": "^3.3.1",
@@ -35,8 +36,11 @@
     "fast-glob": "^3.3.3",
     "marked": "^17.0.1",
     "monaco-editor": "^0.55.1",
+    "node-cron": "^4.2.1",
     "node-pty": "^1.1.0",
+    "playwright": "^1.58.1",
     "solid-js": "1.9.10",
+    "uuid": "^13.0.0",
     "ws": "^8.19.0",
     "zod": "^4.3.4"
   },
@@ -47,11 +51,14 @@
     "@solidjs/testing-library": "^0.8.10",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "4.1.18",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^11.0.0",
     "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^4.0.16",
     "concurrently": "^9.2.1",
