--- a/package.json
+++ b/package.json
@@ -90,6 +90,12 @@
   },
   "packageManager": "pnpm@10.21.0",
   "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3",
+      "protobufjs",
+      "sharp",
+      "esbuild"
+    ],
     "overrides": {
       "sharp": "^0.34.5"
     }
