feat: enhance server shutdown process and worker management
- Added graceful shutdown handling in the server to ensure all workers are properly terminated.
- Integrated manager shutdown logic to clean up worker processes during server shutdown.
- Updated OpencodeManager to handle worker termination with a timeout, allowing for a more robust shutdown process.
- Improved logging for server readiness and shutdown events.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start:server": "tsx --env-file=.env.prod server/src/index.ts",
     "start:test": "concurrently \"pnpm run start:server\" \"pnpm run dev:client\"",
     "start": "pnpm run build && tsx --env-file=.env.prod server/src/index.ts",
+    "restart": "pnpm run build && pm2 restart ecosystem.config.cjs",
+    "stop": "pm2 stop opencode-web-ui",
+    "logs": "pm2 logs opencode-web-ui",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
@@ -71,6 +74,7 @@
     "node-gyp": "^12.2.0",
     "oxfmt": "^0.23.0",
     "oxlint": "^1.38.0",
+    "pm2": "^6.0.14",
     "supertest": "^7.1.4",
     "tailwindcss": "4.1.18",
     "tsx": "^4.21.0",
