--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:server": "NODE_ENV=development tsx watch --env-file=.env.dev server/src/index.ts",
     "generate:certs": "mkdir -p server/certs && openssl req -x509 -newkey rsa:4096 -keyout server/certs/server.key -out server/certs/server.crt -days 365 -nodes -subj \"/C=US/ST=State/L=City/O=Organization/CN=localhost\"",
     "start:server": "tsx --env-file=.env.prod server/src/index.ts",
-    "start:test": "concurrently \"pnpm run start:server\" \"pnpm run dev:client\"",
+    "start:test": "concurrently \"tsx --env-file=.env.test server/src/index.ts\" \"vite dev --mode test\"",
     "start": "pnpm run build && tsx --env-file=.env.prod server/src/index.ts",
     "daemon:restart": "pnpm run build && pm2 restart ecosystem.config.cjs --update-env && pm2 save",
     "stop": "pm2 stop opencode-web-ui",
@@ -42,7 +42,6 @@
     "monaco-editor": "^0.55.1",
     "node-cron": "^4.2.1",
     "node-pty": "^1.1.0",
-    "playwright": "^1.58.1",
     "sharp": "^0.34.5",
     "solid-js": "1.9.10",
     "uuid": "^13.0.0",
@@ -52,7 +51,7 @@
   "devDependencies": {
     "@eslint/js": "9.39.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@playwright/test": "^1.57.0",
+    "@playwright/test": "1.58.2",
     "@solidjs/testing-library": "^0.8.10",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "4.1.18",
@@ -74,6 +73,7 @@
     "node-gyp": "^12.2.0",
     "oxfmt": "^0.23.0",
     "oxlint": "^1.38.0",
+    "playwright": "^1.58.2",
     "pm2": "^6.0.14",
     "supertest": "^7.1.4",
     "tailwindcss": "4.1.18",
@@ -98,7 +98,8 @@
       "better-sqlite3",
       "protobufjs",
       "sharp",
-      "esbuild"
+      "esbuild",
+      "node-pty"
     ],
     "overrides": {
       "sharp": "^0.34.5"
